--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>homework-02-spring-basics</module>
         <module>homework-03-spring-mvc</module>
         <module>homework-04-spring-boot</module>
+        <module>homework-05-hibernate</module>
     </modules>
 
 </project>
